# my-skills

./: .gitignore  LICENSE  README.md
build-skill/: SKILL.md
cpp-dispatch-strategy/: SKILL.md
cpp-project-setup/: SKILL.md
python-project-setup/: SKILL.md
python-project-setup/templates/: .gitignore  Makefile  noxfile.py  pre-commit-config-local.yaml  pre-commit-config-remote.yaml  pyproject.toml
python-project-setup/templates/.claude/: CLAUDE.md
spec-driven-development/: SKILL.md
teach-me/: SKILL.md
teach-me/references/: notes_template.tex
